--- a/index.html
+++ b/index.html
@@ -56,6 +56,27 @@
             <img src="images/icon-share.svg" alt="share" />
           </div>
         </div>
+        <div class="profile-2">
+          <img src="images/avatar-michelle.jpg" alt="profile photo" />
+          <div>
+            <p id="profile-name">Michelle Appleton</p>
+            <p>28 Jun 2020</p>
+          </div>
+          <div class="share-img-container-3">
+            <img src="images/icon-share.svg" alt="share" />
+          </div>
+        </div>
+        <div class="share-2">
+          <h2>SHARE</h2>
+          <ul>
+            <li><i class="fab fa-facebook-square"></i></li>
+            <li><i class="fab fa-twitter"></i></li>
+            <li><i class="fab fa-pinterest"></i></li>
+          </ul>
+          <div class="share-img-container-2">
+            <img src="images/icon-share.svg" alt="share" />
+          </div>
+        </div>
       </div>
     </div>
 
